--- a/plugins/basic/nexus-content-plugin/src/main/resources/static/css/nexus-describe.css
+++ b/plugins/basic/nexus-content-plugin/src/main/resources/static/css/nexus-describe.css
@@ -13,7 +13,7 @@
 
 body {
   font-family: arial, tahoma, verdana, helvetica, sans-serif;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
 }
